--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ts-package",
+    "name": "tsx-package",
     "version": "1.0.0",
     "description": "Easily create Typescript node.js packages from this boilerplate",
     "main": "lib/",
@@ -15,15 +15,17 @@
     },
     "devDependencies": {
         "@types/node": "^16.7.10",
-        "@typescript-eslint/parser": "^4.30.0",
+        "@types/react": "^17.0.19",
         "@typescript-eslint/eslint-plugin": "^4.30.0",
-        "eslint": "^7.32.0",
+        "@typescript-eslint/parser": "^4.30.0",
         "concurrently": "^6.2.1",
+        "eslint": "^7.32.0",
         "nodemon": "^2.0.12",
         "typescript": "^4.4.2",
         "typescript-eslint": "0.0.1-alpha.0"
     },
     "dependencies": {
-        "dotenv": "^10.0.0"
+        "dotenv": "^10.0.0",
+        "react": "^17.0.2"
     }
 }
