--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "lib": ["es2020"],
+        "lib": ["es2020", "dom"],
         "module": "commonjs",
         "target": "es2020",
         "types": ["node"],
@@ -19,6 +19,6 @@
     },
     "exclude": [
         "node_modules",
-        "lib"
+		"lib"
     ]
 }
